--- a/index.css
+++ b/index.css
@@ -1,3 +1,17 @@
+body{
+    margin: 0;
+    height: 100%;
+    background: url("background.svg");
+    background-size: 10%;
+    
+}
+#header {
+    /*background: url("header.png");*/
+    /*width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;*/
+}
 #menu{
 	/*
 	list-style-type: circle;
@@ -17,44 +31,194 @@
 
     list-style-type: none;
     margin: 0;
-    padding-left: 20;
 
     /*list-style-position: inside;*/
     /*default outside*/
     /*(specifies whether the list-item markers should appear inside or outside the content flow)*/
 
-    background: #35c4ea;
+    background: #008800;
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    width: 100%;
+    border-collapse: collapse;
+    border-bottom: 5px black solid;
 }
 
-#menu li{
-	background: #fff811;
-	margin: 5px 5px 5px 5px;
-	display: inline;
-	/*display mengatur tampilan elemen berbaris ke samping atau ke bawah*/
+td#lokasi{
+     cursor: pointer;
+    }  
+td#jadwal-acara{
+     cursor: pointer;
+    }
+#menu td{
+    
+    font-weight: bold;
+    width: 50%;
+    color: white;
+    /*display mengatur tampilan elemen berbaris ke samping atau ke bawah*/
+    font-family: arial;
+    text-transform: uppercase;
 }
 
 a{
-	text-decoration: none;
+    text-decoration: none;
 }
 
 #si-kotak{
 }
 
 #intro{
-	width: 70%;
+    /*width: 90%;*/
+    /* content overflow */
+    
+    background-color: #fff;
+    position: relative;
+    top: 0px;
+    border: 1px solid black;
+    text-align: center;
 }
 #tanggal{
-	padding-right: 30%;
-	width: 30%;
+    text-align: right;
+    display: inline;
+    border-collapse: collapse;
+    font-size: 11pt;
+    width: 400px;
+    border: 1px solid black;
+    height: inherit;
 }
 
 #bismillah {
-	display: inline;
-	width: 30%;
+    width: 400px;
+    font-size: 12pt;
+    display: inline;
+    border: 1px solid black;
 }
 
 #jam{
-	position: absolute;
-	text-align: right;
-	width: 40%;
+    width: 400px;
+    border: 1px solid black;
+    /*position: absolute;*/
+    /* makes the element position is fixed inside the element */
+    /*position: static;*/
+    /*HTML elements are positioned static by default. Static positioned elements are not affected by the top, bottom, left, and right properties. An element with position: static; is not positioned in any special way; it is always positioned according to the normal flow of the page:*/
+    /*position: relative;*/
+    /*position: sticky;*/
+    /*position: fixed; */
+    /* makes the element floating (fixed by screen) */
+
+    display: inline;
+    text-align: right;
+    font-size: 10pt;
+}
+
+.main-container {
+    position: relative;
+}
+
+.sub-container{
+    position: sticky;
+    top: 0px;
+}
+
+.wide {
+    width: 100%;
+    height: 80%;
+    overflow: all;
+    border: 1px solid black;
+}
+
+.wide img{
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 50%;
+    min-height: 50%;
+}
+
+#to-top{
+    position: fixed;
+    bottom: 0;
+    width: 5%;
+    height: 5%;
+}
+
+.bgy-table{
+    width: 100%;
+}
+.bgy-table, .bgy-table tr, .bgy-table tr th, .bgy-table tr td{
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+.bgy-table td{
+    padding-right: 10px; 
+    padding-left: 10px;
+}
+.text-center{
+    text-align: center;
+}
+.bgy-center{
+    text-align: center;
+    
+    top: 30%;
+    left: 0;
+    width: 100%;
+}
+.title-login{
+    font-size:10pt;
+    text-align:center;
+}
+.title-login:hover{
+    font-size:14pt;
+}
+.field-data {
+    border-right: 1px solid grey;
+}
+.bgy-stripped tr:nth-child(even){
+    background-color: #009900;
+    color:white;
+}
+.bgy-stripped tr:nth-child(odd){
+    background-color: #00aa00;
+    color:white;
+}
+.bgy-hover tr:hover{
+    background-color: white;
+    color:black;
+}
+.bgy-hover-yellow tr:hover{
+    background-color: yellow;
+    color:black;
+}
+.bgy-hover-blue tr:hover{
+    background-color: #1199ff;
+    color:white;
+}
+.bgy-white{
+    background: #fff;
+    color: black;
+}
+.bgy-green{
+    background: #33aa33;
+    color: white;
+}
+.bgy-back{
+    background: url("background.svg");
+    background-size: 10%;
+    color: white;
+}
+.bgy-border-white{
+    border-color: #fff;
+}
+.bgy-border-black{
+    border-color: #000;
+}
+.bgy-border-green{
+    border: 1px solid;
+    border-color: #009400;
+}
+.bgy-border-rounded{
+    border-radius: 5px;
 }
