--- a/index.css
+++ b/index.css
@@ -80,6 +80,7 @@ a{
     top: 0px;
     border: 1px solid black;
     text-align: center;
+    color: green;
 }
 #tanggal{
     text-align: right;
@@ -100,7 +101,7 @@ a{
 
 #jam{
     width: 400px;
-    border: 1px solid black;
+    
     /*position: absolute;*/
     /* makes the element position is fixed inside the element */
     /*position: static;*/
@@ -112,9 +113,10 @@ a{
 
     display: inline;
     text-align: right;
-    font-size: 10pt;
+    font-size: 14pt;
 }
-
+#menit{display: inline;}
+#detik{display: inline;}
 .main-container {
     position: relative;
 }
