--- a/index.css
+++ b/index.css
@@ -3,7 +3,6 @@ body{
     height: 100%;
     background: url("background.svg");
     background-size: 10%;
-    
 }
 #header {
     /*background: url("header.png");*/
@@ -83,6 +82,7 @@ a{
     font-size: 14pt;
     color: green;
     font-family: arial;
+    font-weight: bold;
     padding: 10px;
 }
 #tanggal{
