--- a/index.css
+++ b/index.css
@@ -143,12 +143,11 @@ a{
     max-height: 50%;
     min-height: 50%;
 }
-
-#to-top{
-    position: fixed;
-    bottom: 0;
-    width: 5%;
-    height: 5%;
+#maps{
+    display: none;
+}
+#acara{
+    display: none;
 }
 
 .bgy-table{
