--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
-    height: 100%;
+    min-width: 1280px;
+    text-align: center;
     background: url("background.svg");
     background-size: 10%;
 }
@@ -36,7 +37,7 @@ body{
     /*(specifies whether the list-item markers should appear inside or outside the content flow)*/
 
     background: #008800;
-    position: sticky;
+    position: relative;
     top: 0px;
     z-index: 1;
     padding-top: 10px;
@@ -145,9 +146,19 @@ a{
 }
 #maps{
     display: none;
+    visibility: hidden;
 }
+/*#acara:hover{
+}*/
 #acara{
+    width: 100%;
     display: none;
+    visibility: hidden;
+    /*width: 50px;
+    -webkit-transition: width 1s;
+    transition: width 1s;
+    -webkit-transition-timing-function: ease;
+    transition-timing-function: ease;*/
 }
 
 .bgy-table{
