--- a/index.css
+++ b/index.css
@@ -38,11 +38,11 @@ body{
     /*default outside*/
     /*(specifies whether the list-item markers should appear inside or outside the content flow)*/
 
-    background: #008102; /* For browsers that do not support gradients */
-    background: linear-gradient(#008102, #005500); /* Standard syntax (must be last) */
-    background: -ms-linear-gradient(#008102, #005500); /* Standard syntax (must be last) */
-    background: -webkit-linear-gradient(#008102, #005500); /* Standard syntax (must be last) */
-    background: -moz-linear-gradient(#008102, #005500); /* Standard syntax (must be last) */
+    background: #de00c7; /* For browsers that do not support gradients */
+    background: linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
+    background: -ms-linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
+    background: -webkit-linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
+    background: -moz-linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
     position: sticky;
     top: 0px;
     z-index: 1;
@@ -54,7 +54,11 @@ body{
     border-bottom: 5px black solid;
 }
 #menu > tbody > tr > .active{
-    background: #008102;
+    background: #de00c7; /* For browsers that do not support gradients */
+    background: linear-gradient(#de00c7, #ef11d8); /* Standard syntax (must be last) */
+    background: -ms-linear-gradient(#de00c7, #ff22f9, #de00c7); /* Standard syntax (must be last) */
+    background: -webkit-linear-gradient(#de00c7, #ff22f9, #de00c7); /* Standard syntax (must be last) */
+    background: -moz-linear-gradient(#de00c7, #ff22f9, #de00c7); /* Standard syntax (must be last) */
 }
 
 td#lokasi{
