--- a/index.css
+++ b/index.css
@@ -37,11 +37,7 @@ body{
     /*default outside*/
     /*(specifies whether the list-item markers should appear inside or outside the content flow)*/
 
-    background: #de00c7; /* For browsers that do not support gradients */
-    background: linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
-    background: -ms-linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
-    background: -webkit-linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
-    background: -moz-linear-gradient(#de00c7, #ff22f9); /* Standard syntax (must be last) */
+    background: #ff00cc; /* For browsers that do not support gradients */
     position: sticky;
     top: 0px;
     z-index: 1;
@@ -54,11 +50,11 @@ body{
     cursor: pointer;
 }
 #menu > tbody > tr > .active{
-    background: #de00c7; /* For browsers that do not support gradients */
-    background: linear-gradient(#de00c7, #ef11d8); /* Standard syntax (must be last) */
-    background: -ms-linear-gradient(#de00c7, #ff22f9, #de00c7); /* Standard syntax (must be last) */
-    background: -webkit-linear-gradient(#de00c7, #ff22f9, #de00c7); /* Standard syntax (must be last) */
-    background: -moz-linear-gradient(#de00c7, #ff22f9, #de00c7); /* Standard syntax (must be last) */
+    background: #ff00ff; /* For browsers that do not support gradients */
+    background: linear-gradient(#ff00cc, #ff00dd, #ff00ff); /* Standard syntax (must be last) */
+    background: -ms-linear-gradient(#ff00cc, #ff00dd, #ff00ff); /* Standard syntax (must be last) */
+    background: -webkit-linear-gradient(#ff00cc, #ff00dd, #ff00ff); /* Standard syntax (must be last) */
+    background: -moz-linear-gradient(#ff00cc, #ff00dd, #ff00ff); /* Standard syntax (must be last) */
     cursor: default;
 }
 
