--- a/css/simple.css
+++ b/css/simple.css
@@ -353,10 +353,10 @@ label {
                                   supported by Chrome and Opera */
 }
 
-div{
+div {
 	display: block;
-	padding: 10px;
-	margin: 10px;
+	padding-top: 10px;
+	margin: 0;
 }
 
 .background {
@@ -366,7 +366,7 @@ div{
 	width: 100%;
 }
 
-.menu {
+.menu, .toggler-menu {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -405,8 +405,24 @@ div{
 	float: right;
 }
 
+.absolute-position {
+	position: absolute !important;
+}
+
 .fix-position {
-	position: fixed;
+	position: fixed !important;
+}
+
+.relative-position {
+	position: relative !important;
+}
+
+.position-center {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
 }
 
 .toggler-menu {
@@ -457,7 +473,7 @@ div{
 @media screen and (max-width: 720px) {
 
 	.toggler-menu {
-		display: inline-table;
+		display: block;
 		cursor: pointer;
 		padding: 10px;
 		margin: 0px;
@@ -479,21 +495,21 @@ div{
 	}
 
 	.menu ul li {
-		position: relative;
 		border: 1px solid grey;
 		background-color: black;
-		opacity: 0.7;
+		opacity: 0.8;
 	}
 
 	.menu ul li:hover {
-		background-color: grey;
+		opacity: 0.3;
 	}
 
 	.menu ul li a{
 		font-size: 10pt;
-		margin: 0;
 		color: white;
 		box-sizing: border-box;
+		display: block;
+		padding: 10px;
 	}
 
 	.active {
