--- a/css/simple.css
+++ b/css/simple.css
@@ -496,6 +496,8 @@ div {
 
 	.menu ul li {
 		border: 1px solid grey;
+		border-left: 0;
+		border-right: 0;
 		background-color: black;
 		opacity: 0.8;
 	}
@@ -509,7 +511,7 @@ div {
 		color: white;
 		box-sizing: border-box;
 		display: block;
-		padding: 10px;
+		padding: 5%;
 	}
 
 	.active {
